--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my project</title>
+    <title>AB.10 | Projects</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h2>My Projects</h2>
+    </header>
     <li>
-        <a href="https://alinabregvadze.github.io/FrontEndProject/" target="_blank">project 1</a>
+        <a href="https://alinabregvadze.github.io/FrontEndProject/" target="_blank">project 1 - HTML, CSS</a>
     </li>
     <li>
-        <a href="https://alinabregvadze.github.io/Final-Project/" target="_blank">project 2</a>
+        <a href="https://alinabregvadze.github.io/Final-Project/" target="_blank">project 2 - HTML, SASS, JavaScript</a>
     </li>
 </body>
 </html>
