add links to projects

--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
     <li>
         <a href="https://alinabregvadze.github.io/Final-Project/" target="_blank">project 2 - HTML, SASS, JavaScript</a>
     </li>
+    <li>
+        <a href="https://alinabregvadze.github.io/js10/" target="_blank">project 3 - JavaScript (Scroll)</a>
+    </li>
+    <li>
+        <a href="https://alinabregvadze.github.io/js9/" target="_blank">project 4 - JavaScript</a>
+    </li>
 </body>
 </html>
