--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
     <header>
         <h2>My Projects</h2>
     </header>
-    <li>
-        <a href="https://alinabregvadze.github.io/FrontEndProject/" target="_blank">project 1 - HTML, CSS</a>
-    </li>
-    <li>
-        <a href="https://alinabregvadze.github.io/Final-Project/" target="_blank">project 2 - HTML, SASS, JavaScript</a>
-    </li>
-    <li>
-        <a href="https://alinabregvadze.github.io/js10/" target="_blank">project 3 - JavaScript (Scroll)</a>
-    </li>
-    <li>
-        <a href="https://alinabregvadze.github.io/js9/" target="_blank">project 4 - JavaScript</a>
-    </li>
+    <div class="projects">
+        <h6>
+            <a href="https://alinabregvadze.github.io/FrontEndProject/" target="_blank">project 1 - HTML, CSS</a>
+        </h6>
+        <h6>
+            <a href="https://alinabregvadze.github.io/Final-Project/" target="_blank">project 2 - HTML, SASS, JavaScript</a>
+        </h6>
+        <h6>
+            <a href="https://alinabregvadze.github.io/js10/" target="_blank">project 3 - JavaScript (Scroll)</a>
+        </h6>
+        <h6>
+            <a href="https://alinabregvadze.github.io/js9/" target="_blank">project 4 - JavaScript</a>
+        </h6>
+    </div>
 </body>
 </html>
