--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     </header>
     <div class="projects">
         <h6>
-            <a href="https://alinabregvadze.github.io/FrontEndProject/" target="_blank">project 1 - HTML, CSS</a>
+            <a href="https://alinbrg.github.io/FrontEndProject/" target="_blank">project 1 - HTML, CSS</a>
         </h6>
         <h6>
-            <a href="https://alinabregvadze.github.io/Final-Project/" target="_blank">project 2 - HTML, SASS, JavaScript</a>
+            <a href="https://alinbrg.github.io/Final-Project/" target="_blank">project 2 - HTML, SASS, JavaScript</a>
         </h6>
         <h6>
-            <a href="https://alinabregvadze.github.io/js10/" target="_blank">project 3 - JavaScript (Scroll)</a>
+            <a href="https://alinbrg.github.io/js10/" target="_blank">project 3 - JavaScript (Scroll)</a>
         </h6>
         <h6>
-            <a href="https://alinabregvadze.github.io/js9/" target="_blank">project 4 - JavaScript</a>
+            <a href="https://alinbrg.github.io/js9/" target="_blank">project 4 - JavaScript</a>
         </h6>
     </div>
 </body>
