--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <h6>
             <a href="https://alinbrg.github.io/js9/" target="_blank">project 4 - JavaScript</a>
         </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/tribute-page/" target="_blank">Tribute Page</a>
+        </h6>
     </div>
 </body>
 </html>
