--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="https://alinbrg.github.io/js9/" target="_blank">project 4 - JavaScript</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/tribute-page/" target="_blank">Tribute Page</a>
+            <a href="https://alinbrg.github.io/tribute-page/" target="_blank">project 5 - Tribute Page (HTML, CSS)</a>
         </h6>
     </div>
 </body>
