add link to survey form

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <h6>
             <a href="https://alinbrg.github.io/tribute-page/" target="_blank">project 5 - Tribute Page (HTML, CSS)</a>
         </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/survey-form/" target="_blank">project 6 - Survey Form (HTML, CSS)</a>
+        </h6>
     </div>
 </body>
 </html>
