--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="https://alinbrg.github.io/survey-form/" target="_blank">project 6 - Survey Form (HTML, CSS)</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/product-landing-page/" target"_blank">project 7 - Product Landing Page (HTML, CSS, JS)</a>
+            <a href="https://alinbrg.github.io/product-landing-page/" target="_blank">project 7 - Product Landing Page (HTML, CSS, JS)</a>
         </h6>
     </div>
 </body>
