--- a/index.html
+++ b/index.html
@@ -14,25 +14,28 @@
     </header>
     <div class="projects">
         <h6>
-            <a href="https://alinbrg.github.io/FrontEndProject/" target="_blank">project 1 - HTML, CSS</a>
+            <a href="https://alinbrg.github.io/FrontEndProject/" target="_blank">HTML, CSS</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/Final-Project/" target="_blank">project 2 - HTML, SASS, JavaScript</a>
+            <a href="https://alinbrg.github.io/Final-Project/" target="_blank">Portfolio Website (HTML, SASS, JavaScript)</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/js10/" target="_blank">project 3 - JavaScript (Scroll)</a>
+            <a href="https://alinbrg.github.io/js10/" target="_blank">JavaScript (Scroll)</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/js9/" target="_blank">project 4 - JavaScript</a>
+            <a href="https://alinbrg.github.io/js9/" target="_blank">JavaScript</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/tribute-page/" target="_blank">project 5 - Tribute Page (HTML, CSS)</a>
+            <a href="https://alinbrg.github.io/tribute-page/" target="_blank">Tribute Page (HTML, CSS)</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/survey-form/" target="_blank">project 6 - Survey Form (HTML, CSS)</a>
+            <a href="https://alinbrg.github.io/survey-form/" target="_blank">Survey Form (HTML, CSS)</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/product-landing-page/" target="_blank">project 7 - Product Landing Page (HTML, CSS, JS)</a>
+            <a href="https://alinbrg.github.io/product-landing-page/" target="_blank">Product Landing Page (HTML, CSS, JS)</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/for-test/" target="_blank">Portfolio Website (HTML, CSS, JS)</a>
         </h6>
     </div>
 </body>
