--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://alinbrg.github.io/js10/" target="_blank">JavaScript (Scroll)</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/js9/" target="_blank">JavaScript</a>
+            <a href="https://alinbrg.github.io/js9/" target="_blank">To-Do List (JavaScript)</a>
         </h6>
         <h6>
             <a href="https://alinbrg.github.io/tribute-page/" target="_blank">Tribute Page (HTML, CSS)</a>
