--- a/index.html
+++ b/index.html
@@ -14,16 +14,10 @@
     </header>
     <div class="projects">
         <h6>
-            <a href="https://alinbrg.github.io/FrontEndProject/" target="_blank">HTML, CSS</a>
+            <a href="https://alinbrg.github.io/FrontEndProject/" target="_blank">Product Landing Page (HTML, CSS)</a>
         </h6>
         <h6>
             <a href="https://alinbrg.github.io/Final-Project/" target="_blank">Portfolio Website (HTML, SASS, JavaScript)</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/js10/" target="_blank">JavaScript (Scroll)</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/js9/" target="_blank">To-Do List (JavaScript)</a>
         </h6>
         <h6>
             <a href="https://alinbrg.github.io/tribute-page/" target="_blank">Tribute Page (HTML, CSS)</a>
@@ -32,11 +26,15 @@
             <a href="https://alinbrg.github.io/survey-form/" target="_blank">Survey Form (HTML, CSS)</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/product-landing-page/" target="_blank">Product Landing Page (HTML, CSS, JS)</a>
+            <a href="https://alinbrg.github.io/product-landing-page/" target="_blank">Simple Product Landing Page (HTML, CSS, JS)</a>
         </h6>
         <h6>
             <a href="https://alinbrg.github.io/for-test/" target="_blank">Portfolio Website (HTML, CSS, JS)</a>
         </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/technical-documentation/" target="_blank">Technical Documentation Page (HTML, CSS)</a>
+        </h6>
+        
     </div>
 </body>
 </html>
