--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <h6>
             <a href="https://alinbrg.github.io/technical-documentation/" target="_blank">Technical Documentation Page (HTML, CSS)</a>
         </h6>
-        
+        <h6>
+            <a href="https://alinbrg.github.io/personal-portfolio-webpage/" target="_blank">Portfolio Website (HTML, CSS)</a>
+        </h6>
     </div>
 </body>
 </html>
