--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <h6>
             <a href="https://alinbrg.github.io/personal-portfolio-webpage/" target="_blank">Portfolio Website (HTML, CSS)</a>
         </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/watch-survey/" target="_blank">Survey Form (HTML, CSS)</a>
+        </h6>
     </div>
 </body>
 </html>
