--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AB.10 | Projects</title>
+    <title>alinbrg | Projects</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,25 +14,61 @@
     </header>
     <div class="projects">
         <h6>
-            <a href="https://alinbrg.github.io/tribute-page/" target="_blank">Tribute Page (HTML, CSS)</a>
+            <a href="https://alinbrg.github.io/for-test/" target="_blank">Portfolio Website</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/survey-form/" target="_blank">Survey Form (HTML, CSS)</a>
+            <a href="https://alinbrg.github.io/personal-portfolio-webpage/" target="_blank">Portfolio Website 2</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/product-landing-page/" target="_blank">Simple Product Landing Page (HTML, CSS, JS)</a>
+            <a href="https://alinbrg.github.io/technical-documentation/" target="_blank">Technical Documentation Page</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/for-test/" target="_blank">Portfolio Website (HTML, CSS, JS)</a>
+            <a href="https://alinbrg.github.io/tribute-page/" target="_blank">Tribute Page</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/technical-documentation/" target="_blank">Technical Documentation Page (HTML, CSS)</a>
+            <a href="https://alinbrg.github.io/survey-form/" target="_blank">Survey Form</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/personal-portfolio-webpage/" target="_blank">Portfolio Website (HTML, CSS)</a>
+            <a href="https://alinbrg.github.io/watch-survey/" target="_blank">Survey Form 2</a>
         </h6>
         <h6>
-            <a href="https://alinbrg.github.io/watch-survey/" target="_blank">Survey Form (HTML, CSS)</a>
+            <a href="https://alinbrg.github.io/product-landing-page/" target="_blank">Simple Product Landing Page</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/speech-recognition/" target="_blank">Speech Recognition</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/speech-synthesis/" target="_blank">Speech Synthesis</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/flip-cards/" target="_blank">Memory Game (flip cards)</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/slide/" target="_blank">Simple landing page</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/canvas/" target="_blank">Drow on canvas</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/cities/" target="_blank">Filter Cities</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/panels/" target="_blank">Panels</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/storage/" target="_blank">Use Local Storage</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/variables-css-js/" target="_blank">Update CSS Variables with JS</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/clock/" target="_blank">Simple Clock</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/countdown/" target="_blank">Simple Countdown</a>
+        </h6>
+        <h6>
+            <a href="https://alinbrg.github.io/play-keyboard/" target="_blank">Play Music using Keyboard</a>
         </h6>
     </div>
 </body>
