--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>alinbrg | Projects</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="icon.svg" sizes="16x16" />
 </head>
 <body>
     <header>
