update projects list

--- a/index.html
+++ b/index.html
@@ -1,76 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>alinbrg | Projects</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="icon.svg" sizes="16x16" />
-</head>
-<body>
-    <header>
-        <h2>My Projects</h2>
-    </header>
-    <div class="projects">
-        <h6>
-            <a href="https://alinbrg.github.io/for-test/" target="_blank">Portfolio Website</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/personal-portfolio-webpage/" target="_blank">Portfolio Website 2</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/technical-documentation/" target="_blank">Technical Documentation Page</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/tribute-page/" target="_blank">Tribute Page</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/survey-form/" target="_blank">Survey Form</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/watch-survey/" target="_blank">Survey Form 2</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/product-landing-page/" target="_blank">Simple Product Landing Page</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/speech-recognition/" target="_blank">Speech Recognition</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/speech-synthesis/" target="_blank">Speech Synthesis</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/flip-cards/" target="_blank">Memory Game (flip cards)</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/slide/" target="_blank">Simple landing page</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/canvas/" target="_blank">Drow on canvas</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/cities/" target="_blank">Filter Cities</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/panels/" target="_blank">Panels</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/storage/" target="_blank">Use Local Storage</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/variables-css-js/" target="_blank">Update CSS Variables with JS</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/clock/" target="_blank">Simple Clock</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/countdown/" target="_blank">Simple Countdown</a>
-        </h6>
-        <h6>
-            <a href="https://alinbrg.github.io/play-keyboard/" target="_blank">Play Music using Keyboard</a>
-        </h6>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>alinbrg | Projects</title>
+		<link rel="stylesheet" href="reset.css" />
+		<link rel="stylesheet" href="style.css" />
+		<link rel="icon" type="image/png" href="icon.svg" sizes="16x16" />
+	</head>
+	<body>
+		<header>
+			<h2>My Projects</h2>
+		</header>
+		<div class="projects">
+			<ul>
+				<li>
+					<a href="https://portfolio-react-6d6cd.web.app/"
+						>portfolio using react</a
+					>
+				</li>
+				<li>
+					<a href="https://react-e-commerce-76dda.web.app/"
+						>simple e-commerce page using react</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/chat-vue/">chat app using vue</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/movie-search-vue/"
+						>Movie search using vue</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/covid-19-vue/"
+						>covid tracker using vue</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/weather-app-vue/"
+						>weather app using vue</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/tasks/"
+						>create tasks app using vue</a
+					>
+				</li>
+
+				<li>
+					<a href="https://alinbrg.github.io/todo-vue/"
+						>simple to do app using vue</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/canvas/">Draw on canvas</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/panels/">simple panels</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/variables-css-js/"
+						>update css variables with js</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/play-keyboard/"
+						>Play music using keyboard</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/speech-recognition/"
+						>speech recognition</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/speech-synthesis/"
+						>Speech Synthesis</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/cities/">Filter Cities</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/storage/">use local storage</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/clock/">simple clock</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/shadow/">using css shadow</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/countdown/">simple countdown</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/slide/"
+						>landing page withd slide in images</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/quiz/">simple quiz</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/snake/">snake game</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/tic-tac-toe/">tic-tac-toe</a>
+				</li>
+
+				<li>
+					<a href="https://alinbrg.github.io/flip-cards/">memory game</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/nav-sticky/"
+						>simple landing page</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/for-test/"
+						>Simple portfolio page</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/personal-portfolio-webpage/"
+						>Simple portfolio page 2</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/technical-documentation/"
+						>Documentation page</a
+					>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/tribute-page/">Tribute page</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/survey-form/">survey form</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/watch-survey/">survey form 2</a>
+				</li>
+				<li>
+					<a href="https://alinbrg.github.io/product-landing-page/"
+						>Product landing page</a
+					>
+				</li>
+			</ul>
+		</div>
+	</body>
 </html>
