updated project list

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 					>
 				</li>
 				<li>
+					<a href="https://travel-journal-626c2.web.app/">travel journal</a>
+				</li>
+				<li>
+					<a href="https://digital-business-card-9c38e.firebaseapp.com/">digital business card</a>
+				</li>
+				<li>
 					<a href="https://react-e-commerce-76dda.web.app/"
 						>simple e-commerce page using react</a
 					>
