--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 		<div class="projects">
 			<ul>
 				<li>
+					<a href="https://space-react-d2164.web.app/"
+						>landing page (about space) using react</a
+					>
+				</li>
+				<li>
 					<a href="https://portfolio-react-6d6cd.web.app/"
 						>portfolio using react</a
 					>
