--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</li>
 				<li>
 					<a href="https://portfolio-react-6d6cd.web.app/"
-						>portfolio (react)</a
+						>portfolio page in two languages (react)</a
 					>
 				</li>
 				<li>
