--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 					>
 				</li>
 				<li>
+					<a href="https://weather-app-react-7eec3.web.app/"
+						>weather app (react)</a
+					>
+				</li>
+				<li>
 					<a href="https://alinbrg.github.io/github-user-search/"
 						>github user search (react)</a
 					>
